crates/rudolint-rules/tests/snapshots/rule_fixtures__dl3047_wget_progress_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "DL3047",
    "help": null,
    "labels": [],
    "message": "avoid wget without `--progress=dot:giga`, `-q`, or `-nv`",
    "path": "",
    "primary_span": {
      "end_byte": 60,
      "end_column": 44,
      "end_line": 2,
      "start_byte": 17,
      "start_column": 1,
      "start_line": 2
    },
    "severity": "info"
  },
  {
    "code": "DL3047",
    "help": null,
    "labels": [],
    "message": "avoid wget without `--progress=dot:giga`, `-q`, or `-nv`",
    "path": "",
    "primary_span": {
      "end_byte": 864,
      "end_column": 52,
      "end_line": 16,
      "start_byte": 813,
      "start_column": 1,
      "start_line": 16
    },
    "severity": "info"
  }
]
