crates/rudolint-rules/tests/snapshots/rule_fixtures__dl3048_valid_label_key_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
assertion_line: 836
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "DL3048",
    "help": null,
    "labels": [],
    "message": "invalid label key `Com.Example.Name`",
    "path": "",
    "primary_span": {
      "end_byte": 118,
      "end_column": 27,
      "end_line": 3,
      "start_byte": 92,
      "start_column": 1,
      "start_line": 3
    },
    "severity": "style"
  },
  {
    "code": "DL3048",
    "help": null,
    "labels": [],
    "message": "invalid label key `1com.example.name`",
    "path": "",
    "primary_span": {
      "end_byte": 146,
      "end_column": 28,
      "end_line": 4,
      "start_byte": 119,
      "start_column": 1,
      "start_line": 4
    },
    "severity": "style"
  },
  {
    "code": "DL3048",
    "help": null,
    "labels": [],
    "message": "invalid label key `com.example.name-`",
    "path": "",
    "primary_span": {
      "end_byte": 174,
      "end_column": 28,
      "end_line": 5,
      "start_byte": 147,
      "start_column": 1,
      "start_line": 5
    },
    "severity": "style"
  },
  {
    "code": "DL3048",
    "help": null,
    "labels": [],
    "message": "invalid label key `com.example..name`",
    "path": "",
    "primary_span": {
      "end_byte": 202,
      "end_column": 28,
      "end_line": 6,
      "start_byte": 175,
      "start_column": 1,
      "start_line": 6
    },
    "severity": "style"
  },
  {
    "code": "DL3048",
    "help": null,
    "labels": [],
    "message": "invalid label key `com.example--name`",
    "path": "",
    "primary_span": {
      "end_byte": 230,
      "end_column": 28,
      "end_line": 7,
      "start_byte": 203,
      "start_column": 1,
      "start_line": 7
    },
    "severity": "style"
  },
  {
    "code": "DL3048",
    "help": null,
    "labels": [],
    "message": "invalid label key `com.docker.vendor`",
    "path": "",
    "primary_span": {
      "end_byte": 258,
      "end_column": 28,
      "end_line": 8,
      "start_byte": 231,
      "start_column": 1,
      "start_line": 8
    },
    "severity": "style"
  },
  {
    "code": "DL3048",
    "help": null,
    "labels": [],
    "message": "invalid label key `io.docker.image.name`",
    "path": "",
    "primary_span": {
      "end_byte": 289,
      "end_column": 31,
      "end_line": 9,
      "start_byte": 259,
      "start_column": 1,
      "start_line": 9
    },
    "severity": "style"
  },
  {
    "code": "DL3048",
    "help": null,
    "labels": [],
    "message": "invalid label key `org.dockerproject.image.name`",
    "path": "",
    "primary_span": {
      "end_byte": 328,
      "end_column": 39,
      "end_line": 10,
      "start_byte": 290,
      "start_column": 1,
      "start_line": 10
    },
    "severity": "style"
  },
  {
    "code": "DL3048",
    "help": null,
    "labels": [],
    "message": "invalid label key `Bad.Key`",
    "path": "",
    "primary_span": {
      "end_byte": 380,
      "end_column": 52,
      "end_line": 11,
      "start_byte": 329,
      "start_column": 1,
      "start_line": 11
    },
    "severity": "style"
  },
  {
    "code": "DL3048",
    "help": null,
    "labels": [],
    "message": "invalid label key `also..bad`",
    "path": "",
    "primary_span": {
      "end_byte": 380,
      "end_column": 52,
      "end_line": 11,
      "start_byte": 329,
      "start_column": 1,
      "start_line": 11
    },
    "severity": "style"
  }
]
