crates/rudolint-rules/tests/snapshots/rule_fixtures__dl3050_no_superfluous_labels_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
assertion_line: 895
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "DL3050",
    "help": null,
    "labels": [],
    "message": "superfluous label(s) present",
    "path": "",
    "primary_span": {
      "end_byte": 172,
      "end_column": 32,
      "end_line": 4,
      "start_byte": 141,
      "start_column": 1,
      "start_line": 4
    },
    "severity": "info"
  },
  {
    "code": "DL3050",
    "help": null,
    "labels": [],
    "message": "superfluous label(s) present",
    "path": "",
    "primary_span": {
      "end_byte": 248,
      "end_column": 76,
      "end_line": 5,
      "start_byte": 173,
      "start_column": 1,
      "start_line": 5
    },
    "severity": "info"
  }
]
