crates/rudolint-rules/tests/snapshots/rule_fixtures__dl3052_valid_url_labels_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
assertion_line: 953
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "DL3052",
    "help": null,
    "labels": [],
    "message": "configured URL label is not a valid URL",
    "path": "",
    "primary_span": {
      "end_byte": 66,
      "end_column": 50,
      "end_line": 2,
      "start_byte": 17,
      "start_column": 1,
      "start_line": 2
    },
    "severity": "warning"
  }
]
