crates/rudolint-rules/tests/snapshots/rule_fixtures__dl3053_valid_rfc3339_labels_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
assertion_line: 982
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "DL3053",
    "help": null,
    "labels": [],
    "message": "configured RFC3339 label is not a valid timestamp",
    "path": "",
    "primary_span": {
      "end_byte": 68,
      "end_column": 52,
      "end_line": 2,
      "start_byte": 17,
      "start_column": 1,
      "start_line": 2
    },
    "severity": "warning"
  },
  {
    "code": "DL3053",
    "help": null,
    "labels": [],
    "message": "configured RFC3339 label is not a valid timestamp",
    "path": "",
    "primary_span": {
      "end_byte": 449,
      "end_column": 62,
      "end_line": 8,
      "start_byte": 388,
      "start_column": 1,
      "start_line": 8
    },
    "severity": "warning"
  }
]
