crates/rudolint-rules/tests/snapshots/rule_fixtures__dl3054_spdx_labels_validation_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
assertion_line: 1011
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "DL3054",
    "help": null,
    "labels": [],
    "message": "configured SPDX label is not a valid SPDX expression",
    "path": "",
    "primary_span": {
      "end_byte": 67,
      "end_column": 51,
      "end_line": 2,
      "start_byte": 17,
      "start_column": 1,
      "start_line": 2
    },
    "severity": "warning"
  }
]
