crates/rudolint-rules/tests/snapshots/rule_fixtures__dl3056_valid_semver_labels_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
assertion_line: 1069
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "DL3056",
    "help": null,
    "labels": [],
    "message": "configured semantic version label is not valid semver",
    "path": "",
    "primary_span": {
      "end_byte": 174,
      "end_column": 48,
      "end_line": 4,
      "start_byte": 127,
      "start_column": 1,
      "start_line": 4
    },
    "severity": "warning"
  },
  {
    "code": "DL3056",
    "help": null,
    "labels": [],
    "message": "configured semantic version label is not valid semver",
    "path": "",
    "primary_span": {
      "end_byte": 219,
      "end_column": 45,
      "end_line": 5,
      "start_byte": 175,
      "start_column": 1,
      "start_line": 5
    },
    "severity": "warning"
  },
  {
    "code": "DL3056",
    "help": null,
    "labels": [],
    "message": "configured semantic version label is not valid semver",
    "path": "",
    "primary_span": {
      "end_byte": 268,
      "end_column": 49,
      "end_line": 6,
      "start_byte": 220,
      "start_column": 1,
      "start_line": 6
    },
    "severity": "warning"
  }
]
