crates/rudolint-rules/tests/snapshots/rule_fixtures__dl3057_missing_healthcheck_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
assertion_line: 1089
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "DL3057",
    "help": null,
    "labels": [],
    "message": "HEALTHCHECK instruction is missing",
    "path": "",
    "primary_span": {
      "end_byte": 27,
      "end_column": 28,
      "end_line": 1,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 1
    },
    "severity": "warning"
  },
  {
    "code": "DL3057",
    "help": null,
    "labels": [],
    "message": "HEALTHCHECK instruction is missing",
    "path": "",
    "primary_span": {
      "end_byte": 353,
      "end_column": 39,
      "end_line": 16,
      "start_byte": 315,
      "start_column": 1,
      "start_line": 16
    },
    "severity": "warning"
  },
  {
    "code": "DL3057",
    "help": null,
    "labels": [],
    "message": "HEALTHCHECK instruction is missing",
    "path": "",
    "primary_span": {
      "end_byte": 455,
      "end_column": 30,
      "end_line": 22,
      "start_byte": 426,
      "start_column": 1,
      "start_line": 22
    },
    "severity": "warning"
  },
  {
    "code": "DL3057",
    "help": null,
    "labels": [],
    "message": "HEALTHCHECK instruction is missing",
    "path": "",
    "primary_span": {
      "end_byte": 511,
      "end_column": 32,
      "end_line": 25,
      "start_byte": 480,
      "start_column": 1,
      "start_line": 25
    },
    "severity": "warning"
  }
]
